// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPokemonNames shall return all cyan pokemon 1`] = `
[
  "CLEFABLE",
  "DODRIO",
  "FERALIGATR",
  "CLEFAIRY",
  "DODUO",
  "TOTODILE",
  "CROCONAW",
  "CLEFFA",
  "SWABLU",
  "BLASTOISE",
  "DELIBIRD",
  "COMFEY",
  "SQUIRTLE",
  "WARTORTLE",
  "WIGGLYTUFF",
  "GOLDUCK",
  "SLOWBRO",
  "VAPOREON",
  "SLOWKING",
  "TOGEKISS",
  "SYLVEON",
  "JIGGLYPUFF",
  "PSYDUCK",
  "SLOWPOKE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
]
`;

exports[`getPokemonNames shall return all lapis pokemon 1`] = `
[
  "PRIMEAPE",
  "MEGANIUM",
  "MANKEY",
  "CHIKORITA",
  "BAYLEEF",
  "VENUSAUR",
  "VICTREEBEL",
  "MR_MIME",
  "BEWEAR",
  "BULBASAUR",
  "IVYSAUR",
  "BELLSPROUT",
  "WEEPINBELL",
  "MIME_JR",
  "STUFFUL",
  "ESPEON",
  "WOBBUFFET",
  "GARDEVOIR",
  "LUCARIO",
  "LEAFEON",
  "GALLADE",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "RIOLU",
]
`;

exports[`getPokemonNames shall return all pokemon by default 1`] = `
[
  "BUTTERFREE",
  "RATICATE",
  "ARBOK",
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "CLEFABLE",
  "NINETALES",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "STEELIX",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "ALTARIA",
  "BANETTE",
  "WALREIN",
  "CATERPIE",
  "METAPOD",
  "RATTATA",
  "EKANS",
  "PIKACHU",
  "CLEFAIRY",
  "VULPIX",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "PICHU",
  "CLEFFA",
  "HOUNDOUR",
  "SLAKOTH",
  "SWABLU",
  "SHUPPET",
  "SPHEAL",
  "SEALEO",
  "VENUSAUR",
  "CHARIZARD",
  "BLASTOISE",
  "DUGTRIO",
  "VICTREEBEL",
  "GOLEM",
  "GENGAR",
  "KANGASKHAN",
  "MR_MIME",
  "PINSIR",
  "DITTO",
  "DRAGONITE",
  "DELIBIRD",
  "PUPITAR",
  "TYRANITAR",
  "ABSOL",
  "TOXICROAK",
  "ABOMASNOW",
  "BEWEAR",
  "COMFEY",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "GASTLY",
  "HAUNTER",
  "DRATINI",
  "DRAGONAIR",
  "LARVITAR",
  "MIME_JR",
  "CROAGUNK",
  "SNOVER",
  "STUFFUL",
  "PIKACHU_CHRISTMAS",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "HERACROSS",
  "RAIKOU",
  "ENTEI",
  "GARDEVOIR",
  "SABLEYE",
  "SWALOT",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "SYLVEON",
  "DEDENNE",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "MAGNEMITE",
  "MAGNETON",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "MAREEP",
  "FLAAFFY",
  "RALTS",
  "KIRLIA",
  "GULPIN",
  "WYNAUT",
  "BONSLY",
  "RIOLU",
]
`;

exports[`getPokemonNames shall return all pokemon for multiple islands 1`] = `
[
  "RATICATE",
  "CLEFABLE",
  "NINETALES",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "WALREIN",
  "RATTATA",
  "CLEFAIRY",
  "VULPIX",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "CLEFFA",
  "HOUNDOUR",
  "SLAKOTH",
  "SWABLU",
  "SPHEAL",
  "SEALEO",
  "VENUSAUR",
  "CHARIZARD",
  "BLASTOISE",
  "DUGTRIO",
  "VICTREEBEL",
  "GOLEM",
  "KANGASKHAN",
  "MR_MIME",
  "DITTO",
  "DELIBIRD",
  "PUPITAR",
  "TYRANITAR",
  "ABSOL",
  "ABOMASNOW",
  "BEWEAR",
  "COMFEY",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "LARVITAR",
  "MIME_JR",
  "SNOVER",
  "STUFFUL",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "FLAREON",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "ENTEI",
  "GARDEVOIR",
  "SABLEYE",
  "LUCARIO",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "SYLVEON",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "BONSLY",
  "RIOLU",
]
`;

exports[`getPokemonNames shall return all snowdrop pokemon 1`] = `
[
  "RATICATE",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "WALREIN",
  "RATTATA",
  "HOUNDOUR",
  "SLAKOTH",
  "SPHEAL",
  "SEALEO",
  "KANGASKHAN",
  "DITTO",
  "TYRANITAR",
  "ABSOL",
  "ABOMASNOW",
  "SNOVER",
  "PERSIAN",
  "UMBREON",
  "SABLEYE",
  "GLACEON",
  "MEOWTH",
  "EEVEE",
]
`;

exports[`getPokemonNames shall return all taupe pokemon 1`] = `
[
  "NINETALES",
  "ONIX",
  "MAROWAK",
  "TYPHLOSION",
  "VULPIX",
  "CUBONE",
  "CYNDAQUIL",
  "QUILAVA",
  "CHARIZARD",
  "DUGTRIO",
  "GOLEM",
  "PUPITAR",
  "CHARMANDER",
  "CHARMELEON",
  "DIGLETT",
  "GEODUDE",
  "GRAVELER",
  "LARVITAR",
  "ARCANINE",
  "FLAREON",
  "SUDOWOODO",
  "ENTEI",
  "GROWLITHE",
  "BONSLY",
]
`;
